# Healix

./: README.md  docker-compose.yml
ai-orchestrator/: Dockerfile  requirements.txt
ai-orchestrator/src/: __init__.py
ai-orchestrator/src/agents/: __init__.py
ai-orchestrator/src/tools/: __init__.py
alert_ingestion_api/: main.py  schemas.py
api-gateway/: package-lock.json  package.json
control-plane/: Dockerfile  requirements.txt
control-plane/app/: __init__.py
control-plane/app/queue/: __init__.py
control-plane/app/routes/: __init__.py
rag-engine/: Dockerfile  requirements.txt
rust-worker/: Cargo.toml  Dockerfile
rust-worker/src/: main.rs
