[package]
name = "rust-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }

rdkafka = { version = "0.36", features = ["cmake-build"] }

redis = { version = "0.24", features = ["tokio-comp"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"